@@ -1,4 +1,4 @@
-# TODO: rolloffNoiseExp around -6 dB/oct so flat after lipRad (Klatt & Klatt, 1990); AM aspiration noise (not really needed, except maybe for glottis > 0); soundgen() should accept smth like pitch = c(300, NA, 150, 250) and interpret this as two syllables with a pause - use eg as preview in manual pitch correction; morph() - tempEffects; streamline saving all plots a la ggsave: filename, path, different supported devices instead of only png(); automatic addition of pitch jumps at high temp in soundgen() (?)
+# TODO: soundgen - pitch2 for dual source (desynchronized vocal folds); soundgen - invalidAction ignore should remove all limits, ie set permittedValues to -Inf,Inf (otherwise resets to these limits); rolloffNoiseExp around -6 dB/oct so flat after lipRad (Klatt & Klatt, 1990); AM aspiration noise (not really needed, except maybe for glottis > 0); soundgen() should accept smth like pitch = c(300, NA, 150, 250) and interpret this as two syllables with a pause - use eg as preview in manual pitch correction; morph() - tempEffects; streamline saving all plots a la ggsave: filename, path, different supported devices instead of only png(); automatic addition of pitch jumps at high temp in soundgen() (?)
 
 # pitch_app: see a list of all uploaded files (add button - doing it with tooltips doesn't work); load audio + results to double-check old work
 
